--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
     "react": "^16.3.1",
     "react-apollo": "^2.1.3",
     "react-dom": "^16.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
